syntax = "proto3";
package gloo.api.v1;

option go_package = "github.com/solo-io/gloo-enterprise/pkg/plugins/v1/consulconnect";

import "google/protobuf/duration.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

message PluginConfig {
    FilterConfig filter_config = 1;
}

// ConsulConnect contains the configuration necessary for the Consul Connect Plugin
message FilterConfig {
    // The name of the service who owns this proxy
    // Target must be delivered by the filter as part of the authorize request payload
    string target = 1;
    // the hostname of the consul authorize endpoint
    string authorize_hostname = 2;
    // the name of the Envoy Cluster containing the consul authorize endpoint
    string authorize_cluster_name = 3;
    // Connection Timeout tells Gloo to set a timeout for unresponsive connections created to this upstream.
    // If not provided by the user, it will set to a default value
    google.protobuf.Duration connection_timeout = 4 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
}
